src/main/java/org/example/demo_ssr_v1_1/_core/errors/exception/Exception402.java
package org.example.demo_ssr_v1_1._core.errors.exception;

public class Exception402 extends RuntimeException {
    public Exception402(String message) {
        super(message);
    }
}
